--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,4 +8,20 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar_main" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:padding="@dimen/main_padding">
+
+        <Button
+            android:id="@+id/btn_play"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/main_button_play_text"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+
+    </RelativeLayout>
+
 </RelativeLayout>
