--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="main_padding">@dimen/_13sdp</dimen>
     <dimen name="toolbar_height">@dimen/_47sdp</dimen>
     <dimen name="player_view_size">@dimen/_80sdp</dimen>
+    <dimen name="close_button_size">@dimen/_20sdp</dimen>
 
     <!--Text Size dimens-->
     <dimen name="text_size_toolbar_title">@dimen/_16sdp</dimen>
